// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse AT-02 (assume tz = 0: UTC) 1`] = `
{
  "altitude": 2317,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": Uint32Array [
    1764183000,
    1764183600,
    1764184200,
    1764184800,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "°C",
    "timestamp": "",
  },
  "values": {
    "HS": Float32Array [
      3450,
      3420,
      3410,
      3400,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "RH": Float32Array [
      93.5,
      93.4000015258789,
      93.9000015258789,
      94.69999694824219,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TA": Float32Array [
      -7.099999904632568,
      -7.099999904632568,
      -7.199999809265137,
      -7.199999809265137,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "timestamp": Float32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
}
`;

exports[`parse AT-02 (with tz = 1: UTC+1) 1`] = `
{
  "altitude": 2317,
  "station": "mallnitz_ankogel_hintere_lucke",
  "timestamps": Uint32Array [
    1764179400,
    1764180000,
    1764180600,
    1764181200,
  ],
  "units": {
    "HS": "cm",
    "RH": "%",
    "TA": "°C",
    "timestamp": "",
  },
  "values": {
    "HS": Float32Array [
      3450,
      3420,
      3410,
      3400,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "RH": Float32Array [
      93.5,
      93.4000015258789,
      93.9000015258789,
      94.69999694824219,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TA": Float32Array [
      -7.099999904632568,
      -7.099999904632568,
      -7.199999809265137,
      -7.199999809265137,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "timestamp": Float32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
}
`;

exports[`parse AT-07 1`] = `
{
  "altitude": 2180,
  "station": "Gallreideschrofen",
  "timestamps": Uint32Array [
    1764186000,
    1764186600,
    1764187200,
    1764187800,
  ],
  "units": {
    "HS": "cm",
    "ISWR": "W/m²",
    "LF": "%",
    "TA": "°C",
    "TD": "°C",
    "TS.000": "°C",
    "TS.020": "°C",
    "TS.040": "°C",
    "TS.060": "°C",
    "TSS": "°C",
    "timestamp": "ISO8601",
  },
  "values": {
    "HS": Float32Array [
      33.81460189819336,
      33.804500579833984,
      33.9723014831543,
      34.099998474121094,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "ISWR": Float32Array [
      1,
      1,
      1,
      1,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "LF": Float32Array [
      97.9000015258789,
      97.9000015258789,
      97.9000015258789,
      97.80000305175781,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TA": Float32Array [
      -9.300000190734863,
      -9.199999809265137,
      -9.199999809265137,
      -9.300000190734863,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TD": Float32Array [
      -9.568906784057617,
      -9.46914291381836,
      -9.46914291381836,
      -9.581839561462402,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TS.000": Float32Array [
      NaN,
      NaN,
      NaN,
      NaN,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TS.020": Float32Array [
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TS.040": Float32Array [
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TS.060": Float32Array [
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      -99.9000015258789,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "TSS": Float32Array [
      -8.800000190734863,
      -8.800000190734863,
      -8.800000190734863,
      -9,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "timestamp": Float32Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
  },
}
`;
